feat: add markup

--- a/src/index.html
+++ b/src/index.html
@@ -364,6 +364,7 @@
                             </article>
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -512,6 +513,7 @@
                             </a>
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
