--- a/src/pages/job.html
+++ b/src/pages/job.html
@@ -66,6 +66,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -113,6 +114,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -160,6 +162,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
