--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -7,24 +7,227 @@
 </head>
 
 <body class="body">
-<%= htmlWebpackPlugin.options.sectionHeader %>
-<main class="main">
-    <section class="section">
+<%= htmlWebpackPlugin.options.sectionHeaderInvert %>
+<main class="main decor-3">
+    <section class="section mb-130 mbm-80">
         <div class="container">
-            <div class="columns">
-                <div class="columns__col columns__col--6">
-
-                </div>
-                <div class="columns__col columns__col--6">
-                    <svg>
-                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
-                    </svg>
+            <div class="cover">
+                <picture class="cover__picture">
+                    <img src="./assets/content/project-intro.jpg" alt="#">
+                </picture>
+                <div class="cover__content">
+                    <div class="columns">
+                        <div class="columns__col columns__col--5">
+                            <h1 class="title mb-10">
+                                Проектные перевозки
+                            </h1>
+                            <div class="editor fz-14 fz-mob-16 mb-20 mbm-30">
+                                <p>
+                                    Мы можем помочь вам перевезти тяжелый, <br class="tab-hidden">негабаритный и сложный груз
+                                </p>
+                            </div>
+                            <button class="button invert">
+                                <span class="button__text">
+                                    Оставить запрос
+                                </span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="section mb-150 mbm-100">
+        <div class="container">
+            <h2 class="title mb-30 mbm-20">
+                Проекты
+            </h2>
+            <div class="columns columns--projects-grid">
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Перевозка сверхнегабаритного груза весом 320 т" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Перевозка сверхнегабаритного груза весом 320 т
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Мультимодальная перевозка карьерного экскаватора P&H 4100" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Мультимодальная перевозка карьерного экскаватора P&H 4100
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Мультимодальная перевозка карьерного экскаватора P&H 4100" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Мультимодальная перевозка карьерного экскаватора P&H 4100
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Складское хранение
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Перевозка сверхнегабаритного груза весом 320 т" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Перевозка сверхнегабаритного груза весом 320 т
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Складское хранение
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Складское хранение
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Перевозка сверхнегабаритного груза весом 320 т" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Перевозка сверхнегабаритного груза весом 320 т
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="columns__col">
+                    <a class="article-service" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Складское хранение
+                            </h3>
+                            <div class="article-service__toolbar">
+                                <span class="article-service__link">
+                                    Подробнее
+                                </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <%= htmlWebpackPlugin.options.sectionPartners %>
 </main>
-<%= htmlWebpackPlugin.options.sectionPartners %>
 <%= htmlWebpackPlugin.options.sectionFooter %>
 <%= htmlWebpackPlugin.options.temp %>
 </body>
