--- a/src/pages/single-article.html
+++ b/src/pages/single-article.html
@@ -11,11 +11,31 @@
 <main class="main">
     <section class="section">
         <div class="container">
+            <h2 class="title mb-30 mbm-20">
+                Проекты
+            </h2>
             <div class="columns">
-                <div class="columns__col columns__col--6">
-
+                <div class="columns__col columns__col--4">
+                    <a class="article-service article-service--static--large" href="">
+                        <picture class="article-service__picture">
+                            <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                        </picture>
+                        <div class="article-service__content">
+                            <h3 class="article-service__title">
+                                Складское хранение
+                            </h3>
+                            <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                <svg class="article-service__icon">
+                                    <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="columns__col columns__col--6">
+                <div class="columns__col columns__col--8">
                     <svg>
                         <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
                     </svg>
