--- a/src/pages/handbook.html
+++ b/src/pages/handbook.html
@@ -67,6 +67,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
