--- a/src/pages/info.html
+++ b/src/pages/info.html
@@ -55,6 +55,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -105,6 +106,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
