--- a/src/pages/single-post.html
+++ b/src/pages/single-post.html
@@ -39,6 +39,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -89,6 +90,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar slider__progressbar--30 progressbar"></div>
                 </div>
             </div>
         </div>
@@ -137,6 +139,7 @@
                             8
                         </div>
                     </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
