--- a/src/pages/single-project.html
+++ b/src/pages/single-project.html
@@ -9,22 +9,198 @@
 <body class="body">
 <%= htmlWebpackPlugin.options.sectionHeader %>
 <main class="main">
-    <section class="section">
+    <section class="section pt-95 mb-80">
         <div class="container">
-            <div class="columns">
-                <div class="columns__col columns__col--6">
-
+            <article class="article-intro">
+                <picture class="article-intro__picture">
+                    <img src="../assets/content/single-project-intro.jpg" alt="">
+                </picture>
+                <div class="article-intro__content">
+                    <h1 class="article-intro__title">
+                        Перевозка сверхнегабаритного груза весом 320 т
+                    </h1>
                 </div>
-                <div class="columns__col columns__col--6">
-                    <svg>
-                        <use xlink:href="./assets/sprite/sprite.svg#icon-camera"></use>
-                    </svg>
+            </article>
+        </div>
+    </section>
+    <section class="section mb-80">
+        <div class="container">
+            <div class="shift shift--about">
+                <div class="shift__picture">
+                    <img alt="Кто мы?" src="./assets/content/ill-about.jpg">
+                </div>
+                <div class="shift__content">
+                    <h2 class="title mb-20">
+                        Цель
+                    </h2>
+                    <div class="editor color-primary fz-14 fz-mob-16">
+                        <p>
+                            DFL - глобальный логистический оператор, лидер в области логистических процессов на
+                            международном рынке. Штаб-квартира компании находится в Дании, в городе Копенгегене, где DFL
+                            была основана в 1976 году.
+                        </p>
+                        <p>
+                            В Калининграде DFL представлена компанией ООО "ДФЛ Транспорт", которая более 20 лет
+                            оперирует на
+                            региональном рынке и успела из обычного международного экспедитора превратиться в ведущего
+                            поставщика интегрированных решений сети поставок для широкого спектра отраслей
+                            промышленности.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="section mb-80">
+        <div class="container">
+            <div class="container-form">
+                <h2 class="title mb-20">
+                    Запрос на проект
+                </h2>
+                <form action="" class="form">
+                    <div class="columns columns--form">
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-1">
+                            <label class="field">
+                                <p class="field__title">
+                                    ФИО<strong>*</strong>
+                                </p>
+                                <input type="text" class="field__input" placeholder="Укажите ФИО">
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-2">
+                            <label class="field">
+                                <p class="field__title">
+                                    Название организации<strong>*</strong>
+                                </p>
+                                <input type="text" class="field__input" placeholder="Укажите организацию">
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-3">
+                            <label class="field">
+                                <p class="field__title">
+                                    Телефон<strong>*</strong>
+                                </p>
+                                <input type="text" class="field__input" placeholder="+7 (___) ___-__-__">
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-4">
+                            <label class="field">
+                                <p class="field__title">
+                                    Почта<strong>*</strong>
+                                </p>
+                                <input type="text" class="field__input" placeholder="Укажите почту">
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--9 columns__col--tab-6 mod-textarea order-m-5">
+                            <label class="field">
+                                <p class="field__title">
+                                    Комментраий
+                                </p>
+                                <textarea class="field__textarea" placeholder="Опишите подробнее"></textarea>
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-6">
+                            <label class="field">
+                                <p class="field__title">
+                                    Дата погрузки и отгрузки
+                                </p>
+                                <input type="text" class="field__input" placeholder="Выберите даты">
+                            </label>
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-8">
+                            <button class="button full">
+                                <span class="button__text">
+                                    Отправить запрос
+                                </span>
+                            </button>
+                        </div>
+                        <div class="columns__col columns__col--9 columns__col--tab-6 mob-hidden">
+                            <!-- Это сркрыть-->
+                        </div>
+                        <div class="columns__col columns__col--3 columns__col--tab-6 order-m-7">
+                            <label class="agreement">
+                                <input type="checkbox" class="agreement__field">
+                                <div class="agreement__box"></div>
+                                <span class="agreement__text">
+                                    Я согласен на обработку<br> <a href="">персональных данных</a>
+                                </span>
+                            </label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section class="section mb-80">
+        <div class="container">
+            <div class="slider" data-slider="gallery">
+                <div class="toolbar mb-30 mbt-20">
+                    <h2 class="title">
+                        Галерея
+                    </h2>
+                    <div class="nav-slider tab-hide" data-nav>
+                        <button class="nav-slider__button" data-button-prev>
+                            <svg class="nav-slider__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-left"></use>
+                            </svg>
+                        </button>
+                        <button class="nav-slider__button" data-button-next>
+                            <svg class="nav-slider__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-right"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-1.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-2.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-3.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-4.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-1.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-2.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-3.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--gallery">
+                            <picture class="article-gallery">
+                                <img src="./assets/content/item-gallery-4.jpg" alt="Заголовок изображения">
+                            </picture>
+                        </div>
+                    </div>
+                    <div class="slider__progressbar progressbar"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <%= htmlWebpackPlugin.options.sectionPartners %>
 </main>
-<%= htmlWebpackPlugin.options.sectionPartners %>
 <%= htmlWebpackPlugin.options.sectionFooter %>
 <%= htmlWebpackPlugin.options.temp %>
 </body>
