feat: add markup

--- a/src/pages/offers.html
+++ b/src/pages/offers.html
@@ -43,6 +43,234 @@
             <h2 class="title mb-20">
                 Актуальные предложения для загрузок
             </h2>
+            <div class="table" data-table>
+                <div class="table__header">
+                    <div class="table__line table__line--header">
+                        <div class="table__column table__column--15 table__column--align table__column--desktop-only">
+                            <span class="table__text table__text--title">
+                                Загрузка
+                            </span>
+                        </div>
+                        <div class="table__column table__column--15 table__column--align table__column--desktop-only">
+                            <span class="table__text table__text--title">
+                                Выгрузка
+                            </span>
+                        </div>
+                        <div class="table__column table__column--tab-25 table__column--align table__column--tab">
+                            <span class="table__text table__text--title">
+                                Загрузка <br>и выгрузка
+                            </span>
+                        </div>
+                        <div class="table__column table__column--15 table__column--align table__column--tab-25">
+                            <span class="table__text table__text--title">
+                                Тип прицепа
+                            </span>
+                        </div>
+                        <div class="table__column table__column--25 table__column--align">
+                            <span class="table__text table__text--title">
+                                Дополнительно
+                            </span>
+                        </div>
+                        <div class="table__column table__column--40 table__column--align table__column--tab-25">
+                            <span class="table__text table__text--title">
+                                Загрузок в мес.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="table__section opened" data-table-section>
+                    <button class="table__control" data-table-control>
+                        <span class="table__text table__text--title">
+                            Европа - Россия
+                        </span>
+                        <svg class="table__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-drop"></use>
+                        </svg>
+                    </button>
+                    <div class="table__content">
+                        <article class="table__line table__line--regular">
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-de.png" alt="флаг германии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        DE - 49,86
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Калининград
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--tab-25 table__column--tab">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-de.png" alt="флаг германии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        DE - 49,86
+                                    </span>
+                                </div>
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Калининград
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Тент
+                                </span>
+                            </div>
+                            <div class="table__column table__column--25">
+                                <span class="table__text">
+                                    20 тонн стандартный груз
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Регулярный
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--fill table__column--tab-25 table__column--desktop-only">
+                                <button class="table__button" data-table-button>
+                                    Оставить запрос
+                                </button>
+                            </div>
+                        </article>
+                        <article class="table__line table__line--regular">
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-pl.png" alt="флаг польши">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Pl - 80,05,50
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Москва
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--tab-25 table__column--tab">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-pl.png" alt="флаг польши">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Pl - 80,05,50
+                                    </span>
+                                </div>
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Москва
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Тент / Реф
+                                </span>
+                            </div>
+                            <div class="table__column table__column--25">
+                                <span class="table__text">
+                                    20 тонн стандартный груз
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Регулярный
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--fill table__column--tab-25 table__column--desktop-only">
+                                <button class="table__button" data-table-button>
+                                    Оставить запрос
+                                </button>
+                            </div>
+                        </article>
+                        <article class="table__line table__line--regular">
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-lt.png" alt="флаг латвии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        LT - 01,44,91
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--desktop-only">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Санкт-Петербург
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--tab-25 table__column--tab">
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-lt.png" alt="флаг латвии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        LT - 01,44,91
+                                    </span>
+                                </div>
+                                <div class="marker">
+                                    <picture class="marker__picture">
+                                        <img src="./assets/content/flag-ru.png" alt="флаг россии">
+                                    </picture>
+                                    <span class="marker__caption">
+                                        Санкт-Петербург
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Тент
+                                </span>
+                            </div>
+                            <div class="table__column table__column--25">
+                                <span class="table__text">
+                                    20 тонн / -18°C стандартный груз / продукты
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25">
+                                <span class="table__text">
+                                    Регулярный
+                                </span>
+                            </div>
+                            <div class="table__column table__column--15 table__column--tab-25 table__column--fill table__column--desktop-only">
+                                <button class="table__button" data-table-button>
+                                    Оставить запрос
+                                </button>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="section mb-80">
